Fixes and updates

--- a/BLU04 - Exercises Notebook.ipynb
+++ b/BLU04 - Exercises Notebook.ipynb
@@ -135,7 +135,7 @@
    "metadata": {
     "deletable": false,
     "nbgrader": {
-     "checksum": "2c547a0b4d795ec0a0254aee88287951",
+     "checksum": "ca8875333a8a247be378c8a672646b3b",
      "grade": false,
      "grade_id": "cell-05a3d2245d57305d",
      "locked": false,
@@ -155,12 +155,12 @@
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()\n",
     "\n",
-    "# Assign to variable last_word_second_last_line the last word of the second last line\n",
+    "# Assign to variable last_word_second_last_line the last word of the second to last line\n",
     "# last_word_second_last_line = ...\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()\n",
     "\n",
-    "# Assign to variable last_word_third_last_line the last word of the third last line\n",
+    "# Assign to variable last_word_third_last_line the last word of the third to last line\n",
     "# last_word_third_last_line = ...\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
@@ -734,7 +734,7 @@
    "metadata": {
     "deletable": false,
     "nbgrader": {
-     "checksum": "f73cd33ea97224b713d3d548d964771a",
+     "checksum": "ec052d6a01c0326ab3c2539c74c4856a",
      "grade": false,
      "grade_id": "cell-5106c25a705296e8",
      "locked": false,
@@ -750,7 +750,7 @@
     "raise NotImplementedError()\n",
     "\n",
     "# Answer the literacy rate gender gap question\n",
-    "# hint: use idxmin()\n",
+    "# hint: use idxmax()\n",
     "# country_with_higher_literacy_rate_gender_gap = ...\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
@@ -763,7 +763,7 @@
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "1f858d387a065066d3823f3411d19b20",
+     "checksum": "c081b3c58502c6476222931536e0d1e7",
      "grade": true,
      "grade_id": "cell-f60a22c3465d5b83",
      "locked": true,
@@ -782,7 +782,7 @@
     "assert df10.dtypes['Gender difference'] == np.float\n",
     "assert df10.dtypes['Non-UNESCO literacy rate'] == np.float\n",
     "\n",
-    "expected_hash = '5c2e4745c608d719cab6de3f2c11f3d972e212334f794dea783b7dc16c7b31f2'\n",
+    "expected_hash = '21c1903af25470c6fab3693bc200502cf47be42a969dfbf45c94bd5fa61d6fc4'\n",
     "assert hashlib.sha256(country_with_higher_literacy_rate_gender_gap.encode()).hexdigest() == expected_hash"
    ]
   },
