--- a/Learning Notebooks/BLU04 - Learning Notebook - Part 1 of 3 - Notebook magics.ipynb
+++ b/Learning Notebooks/BLU04 - Learning Notebook - Part 1 of 3 - Notebook magics.ipynb
@@ -138,7 +138,7 @@
    "source": [
     "When a file is in fact very big, we can still preview it. But instead of printing all its content, w'll just want to print its first lines.\n",
     "\n",
-    "For this we can use the command **head** (Unix) or **more** in Windows."
+    "For this we can use the command **head** (Unix) or **more** (Windows)."
    ]
   },
   {
@@ -165,12 +165,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, we can also preview the last lines of the file, with commands **tail** (Unix) or ??? (Windows)."
+    "Similarly, we can also preview the last lines of the file, with the **tail** command on Unix.\n",
+    "\n",
+    "Unfortunately, Windows doesn't have a built-in command equivalent to tail. But there are some packages that can be installed to fill this purpose (check this [stackoverflow post](https://stackoverflow.com/questions/187587/a-windows-equivalent-of-the-unix-tail-command)). Or you can always **type** the whole file (if not too big), and read the last lines..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +187,7 @@
    ],
    "source": [
     "# print the content of the last three lines of the file\n",
-    "# in Windows: HELP!!\n",
+    "# in Windows :(\n",
     "! tail -3 ../data/lorem/lorem_ipsum_long.txt"
    ]
   },
