--- a/Learning Notebooks/BLU04 - Learning Notebook - Part 2 of 3 - Reading files.ipynb
+++ b/Learning Notebooks/BLU04 - Learning Notebook - Part 2 of 3 - Reading files.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "A [delimiter separated values](https://en.wikipedia.org/wiki/Delimiter-separated_values) file, is a file where each row represents a data point and its several fields are separated with a **delimiter** character. The lines are separated by [newlines](https://en.wikipedia.org/wiki/Newline#In_programming_languages) (which you can think of as the '\\n' characer).\n",
     "\n",
-    "The best know example of a delimiter separated values file is the **comma separated values**, where the delimiter character is a comma. These files usually have the .csv extension, i.e they are called something.csv.\n",
+    "The best known example of a delimiter separated values file is the **comma separated values**, where the delimiter character is a comma. These files usually have the .csv extension, i.e they are called something.csv.\n",
     "\n",
     "Other common delimiters are:\n",
     "\n",
@@ -3429,7 +3429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
